[CLEANUP][UI] Restructure Task Creator and Form Editor UI for smaller screens - Resolve dropdown cutoff issue by removing usage of overflow-auto - Cleanup dropdown classes - Cleanup Task creator to remove need of special classes

--- a/src/main/webapp/css/core/dropdown.css
+++ b/src/main/webapp/css/core/dropdown.css
@@ -1,11 +1,17 @@
 /* -- Bootstrap dropdown styling -- */
 
-
-.dropdown-toggle-button-table {
+.dropdown-toggle-button {
     height: 100%;
     width: 100%;
     background-color: transparent;
     border: none;
+}
+
+.dropdown-toggle-button img {
+    height: 20px;
+    width: 20px;
+    margin: 0;
+    padding: 0;
 }
 
 .dropdown-menu {
